# pulumi-zpa

./: .ci-mgmt.yaml  .gitignore  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .upgrade-config.yml  CHANGELOG.md  LICENSE  Makefile  README.md  go.work  go.work.sum
.github/: CODEOWNERS  dependabot.yml  (+2 more)
sdk/python/: Pulumi.yaml  README.md  pyproject.toml  setup.py
sdk/python/zscaler_pulumi_zpa/: README.md  __init__.py  _inputs.py  _utilities.py  app_connector_assistant_schedule.py  application_segment.py  application_segment_browser_access.py  application_segment_inspection.py  application_segment_multimatch_bulk.py  application_segment_pra.py  application_segment_weightedlb_config.py  application_server.py  assistant_schedule.py  browser_access.py  browser_certificate.py  c2_cip_ranges.py  cloud_browser_isolation_banner.py  cloud_browser_isolation_certificate.py  cloud_browser_isolation_external_profile.py  connector_group.py  emergency_access_user.py  get_app_connector_assistant_schedule.py  get_app_connector_controller.py  get_app_connector_group.py  get_application_segment.py  get_application_segment_browser_access.py  get_application_segment_by_type.py  get_application_segment_inspection.py  get_application_segment_multimatch_bulk.py  get_application_segment_pra.py  get_application_segment_weightedlb_config.py  get_application_server.py  get_assistant_schedule.py  get_ba_certificate.py  get_branch_connector_group.py  get_browser_protection.py  get_c2_cip_ranges.py  get_cloud_browser_isolation_banner.py  get_cloud_browser_isolation_certificate.py  (+112 more)
(+1590 files in other folders)
