[project]
  name = "zscaler_pulumi_zpa"
  description = "A Pulumi package for creating and managing Zscaler Private Access (ZPA) cloud resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.165.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["pulumi", "zpa", "zscaler", "category/cloud"]
  authors = ["Zscaler, Inc. <devrel@zscaler.com>"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "1.0.0a0+dev"
  [project.license]
    text = "MIT"
  [project.urls]
    Homepage = "https://www.zscaler.com"
    Repository = "https://github.com/zscaler/pulumi-zpa"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      zscaler_pulumi_zpa = ["py.typed", "pulumi-plugin.json"]
